# pylauncher

./: LICENSE  Makefile  PBS_README.md  README  README.md  hostlist114.py  hostlist3.py  pylauncher.py  pylauncher2.py  pylauncher3.py  setup.cfg
doc/: launcher.pptx  pylauncher-manual.tex
docs/: launcher.pptx
examples/: Makefile  commandlines  corecommandlines  example_barrier_launcher.py  example_bigcore_launcher.py  example_checkpoint.py  example_classic_launcher.py  example_core_launcher.py  example_directory_commands.py  example_directory_launcher.py  example_dynamic_job_list.py  example_four_core_launcher.py  example_local_launcher.py  example_mic_launcher.py  example_mod_dir.py  example_mpijob.py  example_mpijob_flex.py  example_qsub_spelled_out.py  example_shell_level.py  example_shifted_ibrun.py  example_truncate_launcher.py  example_variable_core_launcher.py  example_variable_cores.py  hello.c  hello.sh  hellolines  jobscr  jobscript.big  jobscript.host  jobscript.unittest  jobscript_template.ls5  jobscript_template.stampede2  local_paths.sh  make-fake-commands.py  make-hello-commands.py  make_commandlines.py  make_dir_example.py  make_parallel_lines.py  make_sleepcommandlines.py  mpicommandlines  (+4 more)
pylauncher/: pylauncher.py
regression/: local_launcher_path.sh
scripts/: cluster.py
tests/: Make.programs  Makefile  barriercommandlines  bigcorecommandlines  blockcommandlines  commalines  commandlines  corecount.c  example_barrier_launcher.py  example_bigcore_launcher.py  example_block_launcher.py  example_classic_launcher.py  example_comma_launcher.py  (+43 more)
(+62 files in other folders)
