[metadata]
name = pylauncher
version = 4.0
author = Victor Eijkhout
author_email = eijkhout@tacc.utexas.edu
description = Parametric job launcher
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TACC/pylauncher
project_urls =
    Bug Tracker = https://github.com/TACC/pylauncher/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src